# 12306

./: .gitignore  README.md
China-rail-way-stations-data-main/: preprocess.py  readme.md
China-rail-way-stations-data-main/src/: parsed_line.csv  station.csv
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: HealthSection.tsx  HistoryPanel.tsx  InventorySection.tsx  OrderSection.tsx  QuerySection.tsx  ResultPanel.tsx  SectionCard.tsx  WorkflowSection.tsx
frontend/src/hooks/: useExecutor.ts
frontend/src/pages/: AppLayout.tsx  BookingPage.tsx  DashboardPage.tsx  InventoryPage.tsx  LoginPage.tsx  OrdersPage.tsx
frontend/src/state/: AppState.tsx
ticketing/: .env.example  Makefile  docker-compose.yml  go.mod  go.sum  justfile
ticketing(go-zero)/: Makefile  docker-compose.yml  go.mod  go.sum  justfile
ticketing(go-zero)/apps/gateway-api/: gateway.go
ticketing(go-zero)/apps/gateway-api/etc/: gateway-api.yaml
ticketing(go-zero)/apps/inventory-api/: inventory.go
ticketing(go-zero)/apps/inventory-api/etc/: inventory-api.yaml
ticketing(go-zero)/apps/order-api/: order.go
ticketing(go-zero)/apps/order-api/etc/: order-api.yaml
ticketing(go-zero)/apps/query-api/: query.go
ticketing(go-zero)/apps/ticket-worker/: worker.go
ticketing(go-zero)/deploy/: Dockerfile.gozero  docker-compose.gozero.yml
ticketing(go-zero)/deploy/etc/: gateway-api.yaml  inventory-api.yaml  order-api.yaml  query-api.yaml  ticket-worker.yaml
ticketing(go-zero)/pkg/observability/: metrics.go
ticketing(go-zero)/spec/api/: gateway.api  inventory.api  order.api  query.api
ticketing/cmd/gateway/: main.go
ticketing/cmd/inventory-service/: main.go
ticketing/cmd/order-service/: main.go
ticketing/cmd/query-service/: main.go
ticketing/cmd/ticket-worker/: main.go
ticketing/deployments/: Dockerfile.frontend  Dockerfile.go-service  frontend.nginx.conf
ticketing/deployments/observability/: prometheus.yml
ticketing/docs/architecture/: overview.md
ticketing/docs/openapi/: gateway.openapi.yaml  inventory-service.openapi.yaml  order-service.openapi.yaml  query-service.openapi.yaml  ticket-worker.openapi.yaml
ticketing/gateway-nginx/: Dockerfile  nginx.conf
ticketing/gateway-nginx/lua/: policies.lua
ticketing/migrations/: 0001_init.sql  0002_query_readmodel.sql  0003_ticket_outbox.sql
ticketing/seat-allocator/: CMakeLists.txt  Dockerfile  README.md
ticketing/seat-allocator/src/: main.cc
ticketing/tools/: e2e_order_inventory.py  failure_drill_ticket_outbox.py  loadtest_smoke.py  replay_validate.py  seed_stations.py
ticketing/tools/data/: stations.json  stations_seed.sql
ticketing/tools/scripts/: e2e.sh  failure_ticket_outbox.sh  loadtest.sh  migrate.sh  seed.sh  topics.sh  up.sh
(+122 files in other folders)
